Commentaire 3 classes Markov