@@ -7,6 +7,10 @@ import java.nio.file.Paths;
 
 import markov.MarkovChain;
 
+/**
+ * Applicatoin permettant de simuler une chaine de Markov
+ * @author Nicolas
+ */
 public class MarkovApp {
 	
 	public static void main(String[] args) throws Exception {
@@ -25,7 +29,7 @@ public class MarkovApp {
     public static String readFileAsString(String fileName) throws Exception { 
         String data = ""; 
         Path path = Paths.get(fileName); 
-        data = Files.readString(path, StandardCharsets.UTF_8); 
+        data = new String(Files.readAllBytes(path)); // Je suis en java 8 :(
         return data; 
     } 
     
